Meta 3/y.output
Terminals which are not used

   RESERVED


Grammar

    0 $accept: Program $end

    1 Program: PACKAGE ID SEMICOLON Declarations

    2 Declarations: /* empty */
    3             | DeclarationsAux

    4 DeclarationsAux: DeclarationsAux VarDeclaration SEMICOLON
    5                | DeclarationsAux FuncDeclaration SEMICOLON
    6                | VarDeclaration SEMICOLON
    7                | FuncDeclaration SEMICOLON

    8 VarDeclaration: VAR VarSpec
    9               | VAR LPAR VarSpec SEMICOLON RPAR

   10 VarSpec: IdAux Type
   11        | IdAux VarSpecAux Type

   12 VarSpecAux: COMMA IdAux VarSpecAux
   13           | COMMA IdAux

   14 Type: INT
   15     | FLOAT32
   16     | BOOL
   17     | STRING

   18 FuncDeclaration: FUNC IdAux LPAR RPAR FuncBody
   19                | FUNC IdAux LPAR Parameters RPAR Type FuncBody
   20                | FUNC IdAux LPAR Parameters RPAR FuncBody
   21                | FUNC IdAux LPAR RPAR Type FuncBody

   22 Parameters: ParametersAux

   23 ParametersAux: IdAux Type COMMA ParametersAux
   24              | IdAux Type

   25 FuncBody: LBRACE VarsAndStatements RBRACE

   26 VarsAndStatements: VarsAndStatements SEMICOLON
   27                  | VarsAndStatements VarDeclaration SEMICOLON
   28                  | VarsAndStatements Statement SEMICOLON
   29                  | /* empty */

   30 Statement: IdAux ASSIGN Expr
   31          | LBRACE RBRACE
   32          | LBRACE StatementSEMICOLON RBRACE
   33          | IF Expr LBRACE RBRACE
   34          | IF Expr LBRACE StatementSEMICOLON RBRACE
   35          | IF Expr LBRACE RBRACE ELSE LBRACE RBRACE
   36          | IF Expr LBRACE RBRACE ELSE LBRACE StatementSEMICOLON RBRACE
   37          | IF Expr LBRACE StatementSEMICOLON RBRACE ELSE LBRACE RBRACE
   38          | IF Expr LBRACE StatementSEMICOLON RBRACE ELSE LBRACE StatementSEMICOLON RBRACE
   39          | FOR LBRACE RBRACE
   40          | FOR Expr LBRACE RBRACE
   41          | FOR Expr LBRACE StatementSEMICOLON RBRACE
   42          | FOR LBRACE StatementSEMICOLON RBRACE
   43          | RETURN
   44          | RETURN Expr
   45          | FuncInvocation
   46          | ParseArgs
   47          | PRINT LPAR StatementExprSTRLIT RPAR
   48          | error

   49 StatementSEMICOLON: StatementSEMICOLON Statement SEMICOLON
   50                   | Statement SEMICOLON

   51 StatementExprSTRLIT: Expr
   52                    | STRLIT

   53 ParseArgs: IdAux COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   54          | IdAux COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR

   55 FuncInvocation: IdAux LPAR error RPAR
   56               | IdAux LPAR RPAR
   57               | IdAux LPAR Expr RPAR
   58               | IdAux LPAR Expr FuncInvocationAux RPAR

   59 FuncInvocationAux: FuncInvocationAux COMMA Expr
   60                  | COMMA Expr

   61 IdAux: ID

   62 Expr: INTLIT
   63     | REALLIT
   64     | IdAux
   65     | FuncInvocation
   66     | LPAR Expr RPAR
   67     | NOT Expr
   68     | MINUS Expr
   69     | PLUS Expr
   70     | Expr OR Expr
   71     | Expr AND Expr
   72     | Expr LT Expr
   73     | Expr GT Expr
   74     | Expr EQ Expr
   75     | Expr NE Expr
   76     | Expr LE Expr
   77     | Expr GE Expr
   78     | Expr PLUS Expr
   79     | Expr MINUS Expr
   80     | Expr STAR Expr
   81     | Expr DIV Expr
   82     | Expr MOD Expr
   83     | LPAR error RPAR


Terminals, with rules where they appear

$end (0) 0
error (256) 48 54 55 83
SEMICOLON (258) 1 4 5 6 7 9 26 27 28 49 50
BLANKID (259) 53 54
PACKAGE (260) 1
RETURN (261) 43 44
COMMA (262) 12 13 23 53 54 59 60
LBRACE (263) 25 31 32 33 34 35 36 37 38 39 40 41 42
LPAR (264) 9 18 19 20 21 47 53 54 55 56 57 58 66 83
LSQ (265) 53
RBRACE (266) 25 31 32 33 34 35 36 37 38 39 40 41 42
RPAR (267) 9 18 19 20 21 47 53 54 55 56 57 58 66 83
RSQ (268) 53
ELSE (269) 35 36 37 38
FOR (270) 39 40 41 42
IF (271) 33 34 35 36 37 38
VAR (272) 8 9
INT (273) 14
FLOAT32 (274) 15
BOOL (275) 16
STRING (276) 17
PARSEINT (277) 53 54
FUNC (278) 18 19 20 21
CMDARGS (279) 53
PRINT (280) 47
RESERVED (281)
INTLIT (282) 62
REALLIT (283) 63
STRLIT (284) 52
ID (285) 1 61
ASSIGN (286) 30 53 54
OR (287) 70
AND (288) 71
NE (289) 75
EQ (290) 74
GE (291) 77
GT (292) 73
LE (293) 76
LT (294) 72
MINUS (295) 68 79
PLUS (296) 69 78
MOD (297) 82
DIV (298) 81
STAR (299) 80
NOT (300) 67


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
Program (47)
    on left: 1, on right: 0
Declarations (48)
    on left: 2 3, on right: 1
DeclarationsAux (49)
    on left: 4 5 6 7, on right: 3 4 5
VarDeclaration (50)
    on left: 8 9, on right: 4 6 27
VarSpec (51)
    on left: 10 11, on right: 8 9
VarSpecAux (52)
    on left: 12 13, on right: 11 12
Type (53)
    on left: 14 15 16 17, on right: 10 11 19 21 23 24
FuncDeclaration (54)
    on left: 18 19 20 21, on right: 5 7
Parameters (55)
    on left: 22, on right: 19 20
ParametersAux (56)
    on left: 23 24, on right: 22 23
FuncBody (57)
    on left: 25, on right: 18 19 20 21
VarsAndStatements (58)
    on left: 26 27 28 29, on right: 25 26 27 28
Statement (59)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48, on right: 28 49 50
StatementSEMICOLON (60)
    on left: 49 50, on right: 32 34 36 37 38 41 42 49
StatementExprSTRLIT (61)
    on left: 51 52, on right: 47
ParseArgs (62)
    on left: 53 54, on right: 46
FuncInvocation (63)
    on left: 55 56 57 58, on right: 45 65
FuncInvocationAux (64)
    on left: 59 60, on right: 58 59
IdAux (65)
    on left: 61, on right: 10 11 12 13 18 19 20 21 23 24 30 53 54 55
    56 57 58 64
Expr (66)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82 83, on right: 30 33 34 35 36 37 38 40 41 44 51 53 57 58
    59 60 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82


state 0

    0 $accept: . Program $end

    PACKAGE  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: PACKAGE . ID SEMICOLON Declarations

    ID  shift, and go to state 3


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    1 Program: PACKAGE ID . SEMICOLON Declarations

    SEMICOLON  shift, and go to state 5


state 4

    0 $accept: Program $end .

    $default  accept


state 5

    1 Program: PACKAGE ID SEMICOLON . Declarations

    VAR   shift, and go to state 6
    FUNC  shift, and go to state 7

    $default  reduce using rule 2 (Declarations)

    Declarations     go to state 8
    DeclarationsAux  go to state 9
    VarDeclaration   go to state 10
    FuncDeclaration  go to state 11


state 6

    8 VarDeclaration: VAR . VarSpec
    9               | VAR . LPAR VarSpec SEMICOLON RPAR

    LPAR  shift, and go to state 12
    ID    shift, and go to state 13

    VarSpec  go to state 14
    IdAux    go to state 15


state 7

   18 FuncDeclaration: FUNC . IdAux LPAR RPAR FuncBody
   19                | FUNC . IdAux LPAR Parameters RPAR Type FuncBody
   20                | FUNC . IdAux LPAR Parameters RPAR FuncBody
   21                | FUNC . IdAux LPAR RPAR Type FuncBody

    ID  shift, and go to state 13

    IdAux  go to state 16


state 8

    1 Program: PACKAGE ID SEMICOLON Declarations .

    $default  reduce using rule 1 (Program)


state 9

    3 Declarations: DeclarationsAux .
    4 DeclarationsAux: DeclarationsAux . VarDeclaration SEMICOLON
    5                | DeclarationsAux . FuncDeclaration SEMICOLON

    VAR   shift, and go to state 6
    FUNC  shift, and go to state 7

    $default  reduce using rule 3 (Declarations)

    VarDeclaration   go to state 17
    FuncDeclaration  go to state 18


state 10

    6 DeclarationsAux: VarDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 19


state 11

    7 DeclarationsAux: FuncDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 20


state 12

    9 VarDeclaration: VAR LPAR . VarSpec SEMICOLON RPAR

    ID  shift, and go to state 13

    VarSpec  go to state 21
    IdAux    go to state 15


state 13

   61 IdAux: ID .

    $default  reduce using rule 61 (IdAux)


state 14

    8 VarDeclaration: VAR VarSpec .

    $default  reduce using rule 8 (VarDeclaration)


state 15

   10 VarSpec: IdAux . Type
   11        | IdAux . VarSpecAux Type

    COMMA    shift, and go to state 22
    INT      shift, and go to state 23
    FLOAT32  shift, and go to state 24
    BOOL     shift, and go to state 25
    STRING   shift, and go to state 26

    VarSpecAux  go to state 27
    Type        go to state 28


state 16

   18 FuncDeclaration: FUNC IdAux . LPAR RPAR FuncBody
   19                | FUNC IdAux . LPAR Parameters RPAR Type FuncBody
   20                | FUNC IdAux . LPAR Parameters RPAR FuncBody
   21                | FUNC IdAux . LPAR RPAR Type FuncBody

    LPAR  shift, and go to state 29


state 17

    4 DeclarationsAux: DeclarationsAux VarDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 30


state 18

    5 DeclarationsAux: DeclarationsAux FuncDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 31


state 19

    6 DeclarationsAux: VarDeclaration SEMICOLON .

    $default  reduce using rule 6 (DeclarationsAux)


state 20

    7 DeclarationsAux: FuncDeclaration SEMICOLON .

    $default  reduce using rule 7 (DeclarationsAux)


state 21

    9 VarDeclaration: VAR LPAR VarSpec . SEMICOLON RPAR

    SEMICOLON  shift, and go to state 32


state 22

   12 VarSpecAux: COMMA . IdAux VarSpecAux
   13           | COMMA . IdAux

    ID  shift, and go to state 13

    IdAux  go to state 33


state 23

   14 Type: INT .

    $default  reduce using rule 14 (Type)


state 24

   15 Type: FLOAT32 .

    $default  reduce using rule 15 (Type)


state 25

   16 Type: BOOL .

    $default  reduce using rule 16 (Type)


state 26

   17 Type: STRING .

    $default  reduce using rule 17 (Type)


state 27

   11 VarSpec: IdAux VarSpecAux . Type

    INT      shift, and go to state 23
    FLOAT32  shift, and go to state 24
    BOOL     shift, and go to state 25
    STRING   shift, and go to state 26

    Type  go to state 34


state 28

   10 VarSpec: IdAux Type .

    $default  reduce using rule 10 (VarSpec)


state 29

   18 FuncDeclaration: FUNC IdAux LPAR . RPAR FuncBody
   19                | FUNC IdAux LPAR . Parameters RPAR Type FuncBody
   20                | FUNC IdAux LPAR . Parameters RPAR FuncBody
   21                | FUNC IdAux LPAR . RPAR Type FuncBody

    RPAR  shift, and go to state 35
    ID    shift, and go to state 13

    Parameters     go to state 36
    ParametersAux  go to state 37
    IdAux          go to state 38


state 30

    4 DeclarationsAux: DeclarationsAux VarDeclaration SEMICOLON .

    $default  reduce using rule 4 (DeclarationsAux)


state 31

    5 DeclarationsAux: DeclarationsAux FuncDeclaration SEMICOLON .

    $default  reduce using rule 5 (DeclarationsAux)


state 32

    9 VarDeclaration: VAR LPAR VarSpec SEMICOLON . RPAR

    RPAR  shift, and go to state 39


state 33

   12 VarSpecAux: COMMA IdAux . VarSpecAux
   13           | COMMA IdAux .

    COMMA  shift, and go to state 22

    $default  reduce using rule 13 (VarSpecAux)

    VarSpecAux  go to state 40


state 34

   11 VarSpec: IdAux VarSpecAux Type .

    $default  reduce using rule 11 (VarSpec)


state 35

   18 FuncDeclaration: FUNC IdAux LPAR RPAR . FuncBody
   21                | FUNC IdAux LPAR RPAR . Type FuncBody

    LBRACE   shift, and go to state 41
    INT      shift, and go to state 23
    FLOAT32  shift, and go to state 24
    BOOL     shift, and go to state 25
    STRING   shift, and go to state 26

    Type      go to state 42
    FuncBody  go to state 43


state 36

   19 FuncDeclaration: FUNC IdAux LPAR Parameters . RPAR Type FuncBody
   20                | FUNC IdAux LPAR Parameters . RPAR FuncBody

    RPAR  shift, and go to state 44


state 37

   22 Parameters: ParametersAux .

    $default  reduce using rule 22 (Parameters)


state 38

   23 ParametersAux: IdAux . Type COMMA ParametersAux
   24              | IdAux . Type

    INT      shift, and go to state 23
    FLOAT32  shift, and go to state 24
    BOOL     shift, and go to state 25
    STRING   shift, and go to state 26

    Type  go to state 45


state 39

    9 VarDeclaration: VAR LPAR VarSpec SEMICOLON RPAR .

    $default  reduce using rule 9 (VarDeclaration)


state 40

   12 VarSpecAux: COMMA IdAux VarSpecAux .

    $default  reduce using rule 12 (VarSpecAux)


state 41

   25 FuncBody: LBRACE . VarsAndStatements RBRACE

    $default  reduce using rule 29 (VarsAndStatements)

    VarsAndStatements  go to state 46


state 42

   21 FuncDeclaration: FUNC IdAux LPAR RPAR Type . FuncBody

    LBRACE  shift, and go to state 41

    FuncBody  go to state 47


state 43

   18 FuncDeclaration: FUNC IdAux LPAR RPAR FuncBody .

    $default  reduce using rule 18 (FuncDeclaration)


state 44

   19 FuncDeclaration: FUNC IdAux LPAR Parameters RPAR . Type FuncBody
   20                | FUNC IdAux LPAR Parameters RPAR . FuncBody

    LBRACE   shift, and go to state 41
    INT      shift, and go to state 23
    FLOAT32  shift, and go to state 24
    BOOL     shift, and go to state 25
    STRING   shift, and go to state 26

    Type      go to state 48
    FuncBody  go to state 49


state 45

   23 ParametersAux: IdAux Type . COMMA ParametersAux
   24              | IdAux Type .

    COMMA  shift, and go to state 50

    $default  reduce using rule 24 (ParametersAux)


state 46

   25 FuncBody: LBRACE VarsAndStatements . RBRACE
   26 VarsAndStatements: VarsAndStatements . SEMICOLON
   27                  | VarsAndStatements . VarDeclaration SEMICOLON
   28                  | VarsAndStatements . Statement SEMICOLON

    error      shift, and go to state 51
    SEMICOLON  shift, and go to state 52
    RETURN     shift, and go to state 53
    LBRACE     shift, and go to state 54
    RBRACE     shift, and go to state 55
    FOR        shift, and go to state 56
    IF         shift, and go to state 57
    VAR        shift, and go to state 6
    PRINT      shift, and go to state 58
    ID         shift, and go to state 13

    VarDeclaration  go to state 59
    Statement       go to state 60
    ParseArgs       go to state 61
    FuncInvocation  go to state 62
    IdAux           go to state 63


state 47

   21 FuncDeclaration: FUNC IdAux LPAR RPAR Type FuncBody .

    $default  reduce using rule 21 (FuncDeclaration)


state 48

   19 FuncDeclaration: FUNC IdAux LPAR Parameters RPAR Type . FuncBody

    LBRACE  shift, and go to state 41

    FuncBody  go to state 64


state 49

   20 FuncDeclaration: FUNC IdAux LPAR Parameters RPAR FuncBody .

    $default  reduce using rule 20 (FuncDeclaration)


state 50

   23 ParametersAux: IdAux Type COMMA . ParametersAux

    ID  shift, and go to state 13

    ParametersAux  go to state 65
    IdAux          go to state 38


state 51

   48 Statement: error .

    $default  reduce using rule 48 (Statement)


state 52

   26 VarsAndStatements: VarsAndStatements SEMICOLON .

    $default  reduce using rule 26 (VarsAndStatements)


state 53

   43 Statement: RETURN .
   44          | RETURN . Expr

    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    $default  reduce using rule 43 (Statement)

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 74


state 54

   31 Statement: LBRACE . RBRACE
   32          | LBRACE . StatementSEMICOLON RBRACE

    error   shift, and go to state 51
    RETURN  shift, and go to state 53
    LBRACE  shift, and go to state 54
    RBRACE  shift, and go to state 75
    FOR     shift, and go to state 56
    IF      shift, and go to state 57
    PRINT   shift, and go to state 58
    ID      shift, and go to state 13

    Statement           go to state 76
    StatementSEMICOLON  go to state 77
    ParseArgs           go to state 61
    FuncInvocation      go to state 62
    IdAux               go to state 63


state 55

   25 FuncBody: LBRACE VarsAndStatements RBRACE .

    $default  reduce using rule 25 (FuncBody)


state 56

   39 Statement: FOR . LBRACE RBRACE
   40          | FOR . Expr LBRACE RBRACE
   41          | FOR . Expr LBRACE StatementSEMICOLON RBRACE
   42          | FOR . LBRACE StatementSEMICOLON RBRACE

    LBRACE   shift, and go to state 78
    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 79


state 57

   33 Statement: IF . Expr LBRACE RBRACE
   34          | IF . Expr LBRACE StatementSEMICOLON RBRACE
   35          | IF . Expr LBRACE RBRACE ELSE LBRACE RBRACE
   36          | IF . Expr LBRACE RBRACE ELSE LBRACE StatementSEMICOLON RBRACE
   37          | IF . Expr LBRACE StatementSEMICOLON RBRACE ELSE LBRACE RBRACE
   38          | IF . Expr LBRACE StatementSEMICOLON RBRACE ELSE LBRACE StatementSEMICOLON RBRACE

    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 80


state 58

   47 Statement: PRINT . LPAR StatementExprSTRLIT RPAR

    LPAR  shift, and go to state 81


state 59

   27 VarsAndStatements: VarsAndStatements VarDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 82


state 60

   28 VarsAndStatements: VarsAndStatements Statement . SEMICOLON

    SEMICOLON  shift, and go to state 83


state 61

   46 Statement: ParseArgs .

    $default  reduce using rule 46 (Statement)


state 62

   45 Statement: FuncInvocation .

    $default  reduce using rule 45 (Statement)


state 63

   30 Statement: IdAux . ASSIGN Expr
   53 ParseArgs: IdAux . COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   54          | IdAux . COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR
   55 FuncInvocation: IdAux . LPAR error RPAR
   56               | IdAux . LPAR RPAR
   57               | IdAux . LPAR Expr RPAR
   58               | IdAux . LPAR Expr FuncInvocationAux RPAR

    COMMA   shift, and go to state 84
    LPAR    shift, and go to state 85
    ASSIGN  shift, and go to state 86


state 64

   19 FuncDeclaration: FUNC IdAux LPAR Parameters RPAR Type FuncBody .

    $default  reduce using rule 19 (FuncDeclaration)


state 65

   23 ParametersAux: IdAux Type COMMA ParametersAux .

    $default  reduce using rule 23 (ParametersAux)


state 66

   66 Expr: LPAR . Expr RPAR
   83     | LPAR . error RPAR

    error    shift, and go to state 87
    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 88


state 67

   62 Expr: INTLIT .

    $default  reduce using rule 62 (Expr)


state 68

   63 Expr: REALLIT .

    $default  reduce using rule 63 (Expr)


state 69

   68 Expr: MINUS . Expr

    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 89


state 70

   69 Expr: PLUS . Expr

    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 90


state 71

   67 Expr: NOT . Expr

    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 91


state 72

   65 Expr: FuncInvocation .

    $default  reduce using rule 65 (Expr)


state 73

   55 FuncInvocation: IdAux . LPAR error RPAR
   56               | IdAux . LPAR RPAR
   57               | IdAux . LPAR Expr RPAR
   58               | IdAux . LPAR Expr FuncInvocationAux RPAR
   64 Expr: IdAux .

    LPAR  shift, and go to state 85

    $default  reduce using rule 64 (Expr)


state 74

   44 Statement: RETURN Expr .
   70 Expr: Expr . OR Expr
   71     | Expr . AND Expr
   72     | Expr . LT Expr
   73     | Expr . GT Expr
   74     | Expr . EQ Expr
   75     | Expr . NE Expr
   76     | Expr . LE Expr
   77     | Expr . GE Expr
   78     | Expr . PLUS Expr
   79     | Expr . MINUS Expr
   80     | Expr . STAR Expr
   81     | Expr . DIV Expr
   82     | Expr . MOD Expr

    OR     shift, and go to state 92
    AND    shift, and go to state 93
    NE     shift, and go to state 94
    EQ     shift, and go to state 95
    GE     shift, and go to state 96
    GT     shift, and go to state 97
    LE     shift, and go to state 98
    LT     shift, and go to state 99
    MINUS  shift, and go to state 100
    PLUS   shift, and go to state 101
    MOD    shift, and go to state 102
    DIV    shift, and go to state 103
    STAR   shift, and go to state 104

    $default  reduce using rule 44 (Statement)


state 75

   31 Statement: LBRACE RBRACE .

    $default  reduce using rule 31 (Statement)


state 76

   50 StatementSEMICOLON: Statement . SEMICOLON

    SEMICOLON  shift, and go to state 105


state 77

   32 Statement: LBRACE StatementSEMICOLON . RBRACE
   49 StatementSEMICOLON: StatementSEMICOLON . Statement SEMICOLON

    error   shift, and go to state 51
    RETURN  shift, and go to state 53
    LBRACE  shift, and go to state 54
    RBRACE  shift, and go to state 106
    FOR     shift, and go to state 56
    IF      shift, and go to state 57
    PRINT   shift, and go to state 58
    ID      shift, and go to state 13

    Statement       go to state 107
    ParseArgs       go to state 61
    FuncInvocation  go to state 62
    IdAux           go to state 63


state 78

   39 Statement: FOR LBRACE . RBRACE
   42          | FOR LBRACE . StatementSEMICOLON RBRACE

    error   shift, and go to state 51
    RETURN  shift, and go to state 53
    LBRACE  shift, and go to state 54
    RBRACE  shift, and go to state 108
    FOR     shift, and go to state 56
    IF      shift, and go to state 57
    PRINT   shift, and go to state 58
    ID      shift, and go to state 13

    Statement           go to state 76
    StatementSEMICOLON  go to state 109
    ParseArgs           go to state 61
    FuncInvocation      go to state 62
    IdAux               go to state 63


state 79

   40 Statement: FOR Expr . LBRACE RBRACE
   41          | FOR Expr . LBRACE StatementSEMICOLON RBRACE
   70 Expr: Expr . OR Expr
   71     | Expr . AND Expr
   72     | Expr . LT Expr
   73     | Expr . GT Expr
   74     | Expr . EQ Expr
   75     | Expr . NE Expr
   76     | Expr . LE Expr
   77     | Expr . GE Expr
   78     | Expr . PLUS Expr
   79     | Expr . MINUS Expr
   80     | Expr . STAR Expr
   81     | Expr . DIV Expr
   82     | Expr . MOD Expr

    LBRACE  shift, and go to state 110
    OR      shift, and go to state 92
    AND     shift, and go to state 93
    NE      shift, and go to state 94
    EQ      shift, and go to state 95
    GE      shift, and go to state 96
    GT      shift, and go to state 97
    LE      shift, and go to state 98
    LT      shift, and go to state 99
    MINUS   shift, and go to state 100
    PLUS    shift, and go to state 101
    MOD     shift, and go to state 102
    DIV     shift, and go to state 103
    STAR    shift, and go to state 104


state 80

   33 Statement: IF Expr . LBRACE RBRACE
   34          | IF Expr . LBRACE StatementSEMICOLON RBRACE
   35          | IF Expr . LBRACE RBRACE ELSE LBRACE RBRACE
   36          | IF Expr . LBRACE RBRACE ELSE LBRACE StatementSEMICOLON RBRACE
   37          | IF Expr . LBRACE StatementSEMICOLON RBRACE ELSE LBRACE RBRACE
   38          | IF Expr . LBRACE StatementSEMICOLON RBRACE ELSE LBRACE StatementSEMICOLON RBRACE
   70 Expr: Expr . OR Expr
   71     | Expr . AND Expr
   72     | Expr . LT Expr
   73     | Expr . GT Expr
   74     | Expr . EQ Expr
   75     | Expr . NE Expr
   76     | Expr . LE Expr
   77     | Expr . GE Expr
   78     | Expr . PLUS Expr
   79     | Expr . MINUS Expr
   80     | Expr . STAR Expr
   81     | Expr . DIV Expr
   82     | Expr . MOD Expr

    LBRACE  shift, and go to state 111
    OR      shift, and go to state 92
    AND     shift, and go to state 93
    NE      shift, and go to state 94
    EQ      shift, and go to state 95
    GE      shift, and go to state 96
    GT      shift, and go to state 97
    LE      shift, and go to state 98
    LT      shift, and go to state 99
    MINUS   shift, and go to state 100
    PLUS    shift, and go to state 101
    MOD     shift, and go to state 102
    DIV     shift, and go to state 103
    STAR    shift, and go to state 104


state 81

   47 Statement: PRINT LPAR . StatementExprSTRLIT RPAR

    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    STRLIT   shift, and go to state 112
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    StatementExprSTRLIT  go to state 113
    FuncInvocation       go to state 72
    IdAux                go to state 73
    Expr                 go to state 114


state 82

   27 VarsAndStatements: VarsAndStatements VarDeclaration SEMICOLON .

    $default  reduce using rule 27 (VarsAndStatements)


state 83

   28 VarsAndStatements: VarsAndStatements Statement SEMICOLON .

    $default  reduce using rule 28 (VarsAndStatements)


state 84

   53 ParseArgs: IdAux COMMA . BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   54          | IdAux COMMA . BLANKID ASSIGN PARSEINT LPAR error RPAR

    BLANKID  shift, and go to state 115


state 85

   55 FuncInvocation: IdAux LPAR . error RPAR
   56               | IdAux LPAR . RPAR
   57               | IdAux LPAR . Expr RPAR
   58               | IdAux LPAR . Expr FuncInvocationAux RPAR

    error    shift, and go to state 116
    LPAR     shift, and go to state 66
    RPAR     shift, and go to state 117
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 118


state 86

   30 Statement: IdAux ASSIGN . Expr

    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 119


state 87

   83 Expr: LPAR error . RPAR

    RPAR  shift, and go to state 120


state 88

   66 Expr: LPAR Expr . RPAR
   70     | Expr . OR Expr
   71     | Expr . AND Expr
   72     | Expr . LT Expr
   73     | Expr . GT Expr
   74     | Expr . EQ Expr
   75     | Expr . NE Expr
   76     | Expr . LE Expr
   77     | Expr . GE Expr
   78     | Expr . PLUS Expr
   79     | Expr . MINUS Expr
   80     | Expr . STAR Expr
   81     | Expr . DIV Expr
   82     | Expr . MOD Expr

    RPAR   shift, and go to state 121
    OR     shift, and go to state 92
    AND    shift, and go to state 93
    NE     shift, and go to state 94
    EQ     shift, and go to state 95
    GE     shift, and go to state 96
    GT     shift, and go to state 97
    LE     shift, and go to state 98
    LT     shift, and go to state 99
    MINUS  shift, and go to state 100
    PLUS   shift, and go to state 101
    MOD    shift, and go to state 102
    DIV    shift, and go to state 103
    STAR   shift, and go to state 104


state 89

   68 Expr: MINUS Expr .
   70     | Expr . OR Expr
   71     | Expr . AND Expr
   72     | Expr . LT Expr
   73     | Expr . GT Expr
   74     | Expr . EQ Expr
   75     | Expr . NE Expr
   76     | Expr . LE Expr
   77     | Expr . GE Expr
   78     | Expr . PLUS Expr
   79     | Expr . MINUS Expr
   80     | Expr . STAR Expr
   81     | Expr . DIV Expr
   82     | Expr . MOD Expr

    $default  reduce using rule 68 (Expr)


state 90

   69 Expr: PLUS Expr .
   70     | Expr . OR Expr
   71     | Expr . AND Expr
   72     | Expr . LT Expr
   73     | Expr . GT Expr
   74     | Expr . EQ Expr
   75     | Expr . NE Expr
   76     | Expr . LE Expr
   77     | Expr . GE Expr
   78     | Expr . PLUS Expr
   79     | Expr . MINUS Expr
   80     | Expr . STAR Expr
   81     | Expr . DIV Expr
   82     | Expr . MOD Expr

    $default  reduce using rule 69 (Expr)


state 91

   67 Expr: NOT Expr .
   70     | Expr . OR Expr
   71     | Expr . AND Expr
   72     | Expr . LT Expr
   73     | Expr . GT Expr
   74     | Expr . EQ Expr
   75     | Expr . NE Expr
   76     | Expr . LE Expr
   77     | Expr . GE Expr
   78     | Expr . PLUS Expr
   79     | Expr . MINUS Expr
   80     | Expr . STAR Expr
   81     | Expr . DIV Expr
   82     | Expr . MOD Expr

    $default  reduce using rule 67 (Expr)


state 92

   70 Expr: Expr OR . Expr

    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 122


state 93

   71 Expr: Expr AND . Expr

    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 123


state 94

   75 Expr: Expr NE . Expr

    LPAR     shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    ID       shift, and go to state 13
    MINUS    shift, and go to state 69
    PLUS     shift, and go to state 70
    NOT      shift, and go to state 71

    FuncInvocation  go to state 72
    IdAux           go to state 73
    Expr            go to state 124


state 95

   74 Expr: Expr EQ . Expr
